Fixed classloaded issue when instances are moved between different adaptors for more information, please read adaptors/whySharedDirectory.txt